<resources>
    <string name="app_name">ERP运维小管家</string>
    <string name="home">首页</string>
    <string name="transfer">交接</string>
    <string name="msg">消息</string>
    <string name="secretary">小秘书</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="phone_number">手机号码</string>
    <string name="valid_code">验证码</string>
    <string name="get_valid_code">获取验证码</string>
    <string name="register_new_user">注册新用户</string>
    <string name="forget_password">忘记密码&#063;</string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="name">姓名</string>
    <string name="department">部门</string>
    <string name="door_number">门牌号</string>
    <string name="telephone_number">座机号</string>
    <string name="area">区域</string>
    <string name="floor">楼层</string>
    <string name="register">注册</string>
    <string name="hint_input_phone_number">请输入手机号码</string>
    <string name="hint_input_valid_code">请输入验证码</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_username">请输入用户名称</string>
    <string name="hint_input_name">请输入姓名(必填)</string>
    <string name="hint_text_department">请选择部门(必选)</string>
    <string name="hint_input_door_number">请输入办公室门牌号</string>
    <string name="hint_input_telephone_number">请输入座机号</string>
    <string name="hint_input_area">请选择区域(必填)</string>
    <string name="hint_input_floor_number">请输入楼层(必填)</string>
    <string name="error_valid_code_increct">验证码错误</string>

    <string name="page_name_register">新用户注册</string>
    <string name="page_name_forget_password">忘记密码</string>
    <string name="confirm">确认</string>

    <string name="maintain">运维服务</string>
    <string name="communication">意见交流</string>
    <string name="telephone_book">电话簿</string>
    <string name="resource_apply">物资管理</string>
    <string name="meeting_apply">会议申请</string>
    <string name="good_news">好消息</string>

    <string name="meeting_occupy">占用一览表</string>
    <string name="meeting_my">我的会议</string>
    <string name="meeting_manage">会议管理</string>

    <string name="meeting_name">会议名称</string>
    <string name="meeting_location">会议地点</string>
    <string name="meeting_type">会议类型</string>
    <string name="meeting_start_time">开始时间</string>
    <string name="meeting_end_time">结束时间</string>
    <string name="meeting_description">会议简介</string>
    <string name="meeting_hint_name">请输入本次会议名称</string>
    <string name="meeting_hint_location">请选择会议地点</string>
    <string name="meeting_hint_start_time">请输入会议开始时间</string>
    <string name="meeting_hint_end_time">请输入会议结束时间</string>
    <string name="meeting_hint_type">情选择会议类型</string>
    <string name="meeting_hint_description">请输入会议简介(最多50字)</string>
    <string name="meeting_submit">提交申请</string>
    <string name="meeting_apply_success">会议申请提交成功</string>
    <string name="meeting_apply_record">申请记录</string>
    <string name="meeting_attend_record">参会记录</string>
    <string name="meeting_detail">会议详情</string>
    <string name="meeting_guarantee_information">保障信息</string>
    <string name="meeting_notice">会议通知</string>
    <string name="meeting_notice_next">通知下一议题侯会人员</string>
    <string name="meeting_sign_up">会议报名人员</string>
    <string name="meeting_attend_person">实际参会人员</string>
    <string name="meeting_zcod_sign_up">报名二维码</string>
    <string name="meeting_sign_in">签到二维码</string>
    <string name="meeting_system_notice">系统内通知</string>
    <string name="select">选择</string>
    <string name="meeting_guarantee_progress">保障进度</string>
    <string name="meeting_guarantee_person">保障人员</string>
    <string name="meeting_apply_person">申请人</string>
    <string name="meeting_apply_person_phone">申请人电话</string>
    <string name="meeting_apply_person_department">申请人部门</string>
    <string name="meeting_apply_person_area">申请人办公区域</string>
    <string name="meeting_apply_person_floor">申请人楼层</string>
    <string name="meeting_apply_person_door">申请人办公室</string>
    
    <string name="msg_read">已读</string>
    <string name="msg_read_not">未读</string>
    <string name="good_news_has_sign_in">已报名</string>
    <string name="good_news_sign_in_now">马上报名</string>
    <string name="rating">评价</string>
    <string name="rating_star">评星</string>
    <string name="rating_message">评价</string>
    <string name="calendar_item_new_count">%d条</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="resource_manage">物资管理</string>
    <string name="check_all">全选</string>
    <string name="resource_lost">物资挂失</string>
    <string name="resource_lost_apply">物资挂失申请单</string>
    <string name="resource_lost_list">物资挂失申请记录</string>
    <string name="resource_apply_title">物资申请单</string>
    <string name="resource_apply_list">物资申请记录</string>
    <string name="resource_my">我的物资</string>

    <string name="role_name_fix">运维人员</string>
    <string name="role_name_resource_manage">物资管理员</string>
    <string name="role_name_normal">普通员工</string>
    <string name="work_list_my">我的工单</string>
    <string name="work_list_unfinished">未完成</string>
    <string name="work_list_finished">已完成</string>
    <string name="work_list_type">工单类型:</string>
    <string name="work_list_apply">运维申请人:</string>
    <string name="work_list_apply_department">申请部门:</string>
    <string name="work_list_status">工单状态:</string>
    <string name="work_list_description">描述</string>
    <string name="work_list_finish">完成</string>
    <string name="meeting_time">会议时间</string>

    <string name="STATUS_ADD">新增</string>
    <string name="STATUS_DISPATCH">已派单</string>
    <string name="STATUS_CONFIRM">已确认</string>
    <string name="STATUS_FINISH">已完成</string>
    <string name="STATUS_COMMENT">已评价</string>
    <string name="resource_yard">仓库物资交接</string>
    <string name="resource_transfer">物资交接</string>
    <string name="comments_label">您的评价对提高保障运维工作和改善服务很重要。请您真实及时地对为您提供服务的人员进行评价(一星表示最差，五星表示最好)</string>
    <string name="about_us">成都市金网安科技有限公司   版权所有</string>
    <string name="qq">QQ: 22268607@qq.com</string>
</resources>
