<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back_gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_name"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color"
            android:padding="@dimen/dimen_10"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_name"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/meet_detail_text_color"
            android:padding="@dimen/dimen_10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_location"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color"
            android:padding="@dimen/dimen_10"
            />
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_location"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/meet_detail_text_color"
            android:padding="@dimen/dimen_10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_start_time"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color"
            android:padding="@dimen/dimen_10"
            />
        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_start_time"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/meet_detail_text_color"
            android:padding="@dimen/dimen_10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_end_time"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color"
            android:padding="@dimen/dimen_10"
            />
        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_end_time"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/meet_detail_text_color"
            android:padding="@dimen/dimen_10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_description"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color"
            android:padding="@dimen/dimen_10"
            />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_description"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/meet_detail_text_color"
            android:padding="@dimen/dimen_10"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dimen_15"
        android:padding="@dimen/dimen_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_notice"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color"
            android:padding="@dimen/dimen_10"/>
        <Button
            android:id="@+id/notice_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_system_notice"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_10"
            android:background="@drawable/button_background"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="@dimen/dimen_1"
        android:padding="@dimen/dimen_10">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_notice_next"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color"
            android:padding="@dimen/dimen_10"/>
        <Button
            android:id="@+id/select_next_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_10"
            android:background="@drawable/button_background"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/sign_person"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_sign_up"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/text_color"
        android:padding="@dimen/dimen_10"
        android:drawableRight="@drawable/ic_right"/>
    <TextView
        android:id="@+id/attend_person"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_attend_person"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/text_color"
        android:padding="@dimen/dimen_10"
        android:drawableRight="@drawable/ic_right"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12"
        >
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_zcod_sign_up"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_10"
            android:background="@drawable/button_background"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dimen_15"/>
        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_sign_in"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/white"
            android:padding="@dimen/dimen_10"
            android:background="@drawable/button_background"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_15"/>
    </RelativeLayout>

</LinearLayout>
</ScrollView>