<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/img_logo"
            android:text="@string/app_name"
            android:drawablePadding="@dimen/dimen_15"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="42dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.managesystem.widegt.JustifyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/user_name"
                android:textSize="@dimen/text_size_16"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:textColor="@color/text_black"/>
            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_username"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="@color/devider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.managesystem.widegt.JustifyTextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="@dimen/text_size_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:textColor="@color/text_black"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_hint"
                android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider"/>
        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:text="记住密码"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/dimen_12"/>

        <Button
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="16sp"
            android:background="@drawable/selector_btn_login"
            android:textColor="@color/button_text_selector"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            >
            <TextView
                android:id="@+id/register_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/register_new_user"
                android:textColor="#178cbf"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/forget_password"
                android:textColor="#178cbf"
                android:textSize="12sp"
                 />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>