<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="42dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.managesystem.widegt.JustifyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name"
                    android:textSize="@dimen/text_size_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_input_name"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="@color/devider"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.managesystem.widegt.JustifyTextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:textSize="@dimen/text_size_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:textColor="@color/text_black"/>
                <TextView
                    android:id="@+id/tv_department"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:text="@string/hint_text_department"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColor="@color/text_hint"
                    android:textColorHint="@color/text_hint"
                    android:layout_gravity="center_vertical"
                    android:drawableRight="@drawable/ic_right"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.managesystem.widegt.JustifyTextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/door_number"
                    android:textSize="@dimen/text_size_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_door_number"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_input_door_number"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.managesystem.widegt.JustifyTextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone_number"
                    android:textSize="@dimen/text_size_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_telephone_number"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_input_telephone_number"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.managesystem.widegt.JustifyTextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textSize="@dimen/text_size_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_area"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_input_area"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devider"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.managesystem.widegt.JustifyTextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/floor"
                    android:textSize="@dimen/text_size_16"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:includeFontPadding="true"
                    android:textColor="@color/text_black"/>
                <EditText
                    android:id="@+id/et_floor_number"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_input_floor_number"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_hint"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/fab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="16sp"
            android:background="@drawable/selector_btn_login"
            android:textColor="@color/button_text_selector"
            />
        </LinearLayout>
</LinearLayout>